<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Klindyuk1919MaterialDesign</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="refresh">REFRESH</string>
    <string name="exit">EXIT</string>
    <string name="error_nasa_api_key">Проверьте ваш NASA_API_KEY</string>
    <string name="screen_one">Screen One</string>
    <string name="screen_two">Screen Two</string>
    <string name="description_fab">description_fab</string>
    <string name="archive">archive</string>
    <string name="paste">paste</string>
    <string name="send">send</string>
    <string name="clear">clear</string>
    <string name="downhill_skiing">downhill skiing</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="two_days_ago">Two Days Ago</string>
    <string name="chip1" tools:ignore="Typos">chip1</string>
    <string name="chip2">chip2</string>
    <string name="chip3">chip3</string>
    <string name="themes">THEMES</string>
    <string name="menu_two">Меню 2</string>
    <string name="menu_three">Меню 3</string>
    <string name="base_theme">BASE THEME</string>
    <string name="red_theme">RED THEME</string>
    <string name="orange_theme">ORANGE THEME</string>
    <string name="green_theme">GREEN THEME</string>
    <string name="purple_theme">PURPLE THEME</string>
    <string name="empty_fragment">EMPTY FRAGMENT</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="one">1</string>
    <string name="double_dot">..</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="hw3_vp">hw3_view_pager</string>
    <string name="earth">Earth</string>
    <string name="solar_system">System</string>
    <string name="mars">Mars</string>
    <string name="api_bottom_fragment">Api Bottom Fragment</string>
    <string name="epic">EPIC</string>
    <string name="lifs">LIFS</string>
    <string name="coordinate_lat_lon">lt/ln: %s, %s</string>
    <string name="image_load_ten_sec">картинка почему-то загружается секунд 10</string>
    <string name="youtube">YouTube</string>
    <string name="video_today">\t<![CDATA[Сегодня у нас без картинки дня, но есть  видео дня! \n Кликни >ЗДЕСЬ< чтобы открыть в новом окне]]> \n %s</string>
    <string name="hw4">HW4</string>

    <string name="large_text" translatable="false">"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"</string>
    <string name="title">Title</string>

    <string name="sw_decription">
        \t\t Шел третий курс по Андроид, многие из нас уже начали выгорать,
        однако, наш мастер-джедай, не сомневался,
        что каждый из его падаванов рано или поздно найдет свой путь к силе и устроится на работу,
        тем самым вдохновля новые умы, на борьбу с темной стороной, ленью и страхом первых собесов…\n\n</string>
    <string name="episode_iii">EPISODE III</string>
    <string name="material_design">MY MATERIAL DESIGN</string>
    <string name="hw6">hw6</string>
    <string name="start">START</string>
    <string name="sw_begin">\t\tСовсем-совсем недавно, буквально пару недель назад…</string>
    <string name="second_fragment">SECOND FRAGMENT</string>
    <string name="fabforoptionmene">FabForOptionMene</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="textDescription">MarsDescription</string>
    <string name="header">Заголовок</string>
    <string name="fab">FAB</string>
    <string name="fab_back">FAB_BACK</string>
    <string name="middle_text"> "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"</string>

</resources>