<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_viewmodel.ThemesFragment">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purple_theme" />

    </RadioGroup>

</FrameLayout>