<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".viewviewmodel.nasarequests.PictureOfTheDayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/success_view_epic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_epic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_wiki"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:helperText="@string/wiki_helper_text"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text_epic"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.example.materialdesign.utils.EquilateralImageView
            android:id="@+id/image_view_epic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_of_the_day_stub"
            android:scaleType="fitCenter"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_epic"
            app:srcCompat="@drawable/ic_no_photo_vector" />

        <TextView
            android:id="@+id/textview_epic_one"
            style="@style/MyTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_epic"
            tools:text="@string/clear" />

        <TextView
            android:id="@+id/textview_epic_two"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/clear"
            style="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toBottomOf="@id/textview_epic_one"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_layout" />

    <include
        android:id="@+id/error"
        layout="@layout/error_layout" />

</FrameLayout>


